gen/v25.1/rpk/rpk-debug-bundle.adoc
= rpk debug bundle
:description: rpk debug bundle

'rpk debug bundle' collects environment data that can help debug and diagnose
issues with a redpanda cluster, a broker, or the machine it's running on. It
then bundles the collected data into a ZIP file, called a diagnostics bundle.

The files and directories in the diagnostics bundle differ depending on the 
environment in which Redpanda is running:

COMMON FILES

 - Kafka metadata: Broker configs, topic configs, start/committed/end offsets,
   groups, group commits.

 - Controller logs: The controller logs directory up to a limit set by
   --controller-logs-size-limit flag

 - Data directory structure: A file describing the data directory's contents.

 - Redpanda configuration: The redpanda configuration file (`redpanda.yaml`;
   SASL credentials are stripped).

 - Runtime system information (/proc): Process information, by reading /proc 
  files like core count, cache, frequency, interrupts, mounted file systems, 
  memory usage, kernel command line.

 - Resource usage data: CPU usage percentage, free memory available for the
   redpanda process.

 - Clock drift: The ntp clock delta (using pool.ntp.org as a reference) & round
   trip time.

 - Admin API calls: Multiple requests to gather information such as: Cluster and
   broker configurations, cluster health data, balancer status, cloud storage
   status, CPU profiles, and license key information.

 - Broker metrics: The broker's Prometheus metrics, fetched through its
   admin API (/metrics and /public_metrics).

 - Crash information: Both startup_log and crash_reports will be collected if
   present in the configured data directory.

BARE-METAL

 - Kernel: The kernel logs ring buffer (syslog) and parameters (sysctl).

 - DNS: The DNS info as reported by 'dig', using the hosts in
   /etc/resolv.conf.

 - Disk usage: The disk usage for the data directory, as output by 'du'.

 - Redpanda logs: The node's Redpanda logs written to journald since yesterday
   (00:00:00 of the previous day based on systemd.time). If '--logs-since' or 
   '--logs-until' are passed, then only the logs within the resulting time frame
   are included.

 - Socket info: The active sockets data output by 'ss'.

 - Running process info: As reported by 'top'.

 - Virtual memory stats: As reported by 'vmstat'.

 - Network config: As reported by 'ip addr'.

 - lspci: List the PCI buses and the devices connected to them.

 - dmidecode: The DMI table contents. Only included if this command is run
   as root.

 - System load average: As reported by 'uptime'

KUBERNETES

 - Kubernetes Resources: Kubernetes manifests for all resources in the given 
   Kubernetes namespace (via --namespace).

 - redpanda logs: Logs of each Pod in the the given Kubernetes namespace. If 
   --logs-since is passed, only the logs within the given timeframe are 
   included.

EXTRA REQUESTS FOR PARTITIONS

You can provide a list of partitions to save additional admin API requests
specifically for those partitions.

The partition flag accepts the format {namespace}/[topic]/[partitions...]
where the namespace is optional, if the namespace is not provided, rpk will 
assume 'kafka'. For example:

Topic 'foo', partitions 1, 2 and 3:
  --partitions foo/1,2,3

Namespace _redpanda-internal, topic 'bar', partition 2
  --partitions _redpanda-internal/bar/2

If you have an upload URL from the Redpanda support team, provide it in the 
--upload-url flag to upload your diagnostics bundle to Redpanda.

== Usage

[,bash]
----
rpk debug bundle [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|--controller-logs-size-limit |string |The size limit of the controller logs that can be stored in the bundle. For example: 3MB, 1GiB (default "132MB").

|--cpu-profiler-wait |duration |How long to collect samples for the CPU profiler. For example: 30s, 1.5m. Must be higher than 15s (default 30s).

|-h, --help |- |Help for bundle.

|-l, --label-selector |stringArray |Comma-separated label selectors to filter your resources. For example: <label>=<value>,<label>=<value> (K8s only) (default [app.kubernetes.io/name=redpanda]).

|--logs-since |string |Include logs dated from specified date onward; (journalctl date format: YYYY-MM-DD, 'yesterday', or 'today'). See the journalctl documentation for more options (default "yesterday").

|--logs-size-limit |string |Read the logs until the given size is reached. For example: 3MB, 1GiB (default "100MiB").

|--logs-until |string |Include logs older than the specified date; (journalctl date format: YYYY-MM-DD, 'yesterday', or 'today'). See the journalctl documentation for more options.

|--metrics-interval |duration |Interval between metrics snapshots. For example: 30s, 1.5m (default 10s).

|--metrics-samples |int |Number of metrics samples to take (at the interval of --metrics-interval). Must be >= 2 (default 2).

|-n, --namespace |string |The namespace to use to collect the resources from (K8s only) (default "redpanda").

|-o, --output |string |The file path where the debug file will be written (default ./&lt;timestamp&gt;-bundle.zip).

|-p, --partition |stringArray |Comma-separated partition IDs. When provided, rpk saves extra Admin API requests for those partitions. See the help for extended usage.

|--timeout |duration |How long to wait for child commands to execute. For example: 30s, 1.5m (default 31s).

|--upload-url |string |If provided, where to upload the bundle in addition to creating a copy on disk.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===